...
          />
        )}
      />

      {!selection.isSelectionMode ? <Pressable
        onPress={() => setIsCreateSnapVisible(true)}
        testID="create-snap-open-button"
        accessibilityRole="button"
        accessibilityLabel="Create Quick Snap"
        style={{
          position: 'absolute',
          right: theme.spacing.xl,
          bottom: 118,
...
